--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,46 @@
-"name": "Zorey AI - Chatbot AI Assistant",
-  "short_name": "ZoreyAI",
-  "start_url": ".",
+{
+  "name": "Zorey AI - Chatbot AI Assistant",
+  "short_name": "Zorey AI",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#FFE8B0",
-  "theme_color": "#FFE8B0",
-  "description": "Zorey AI adalah PWA chatbot pintar untuk belajar, menjawab soal, dan membantu aktivitas pelajar modern.",
+  "theme_color": "#FF6B00",
+  "description": "Zorey AI adalah aplikasi web progresif (PWA) cerdas berbasis AI yang membantu pelajar memahami materi, menjawab soal, dan terhubung langsung ke Google Drive. Ringan, bisa diinstall di Mobile/Desktop, dan terus dikembangkan dengan fitur edukatif berbasis teknologi terbaru",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "logo.png",
+      "src": "icon-maskable-192x192.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icon-maskable-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "preview-zorey.png",
+      "sizes": "1280x720",
       "type": "image/png"
+    }
+  ],
+  "related_applications": [
+    {
+      "platform": "webapp",
+      "url": "https://zorey-ai.vercel.app/manifest.json"
     }
   ]
 }
